# power

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_run.sh  requirements.txt  setup.py  uwsgi.ini
app/static/: auth.js  index.html  index.js  parameters.js
docker/: Dockerfile
python/: app.py  requirements.txt  speed.py  test.py  utils.py  uwsgi.ini
python/static/: app.js  index.html  index.js  parameters.html
src/: main.cpp
src/opt_power/: auth.py  flask_app.py  utils.py
src/opt_power.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
